gitops/platform/shared-ingress/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polyglot-api-ingress
  namespace: polyglot-dev

  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
  - host: dashboard.local
    http:
      paths:

      - path: /api/js(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: javascript-api-dev
            port:
              number: 80

      - path: /api/java(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: java-service-dev
            port:
              number: 80

      - path: /api/rust(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rust-processor-dev
            port:
              number: 80
