gitops/platform/shared-ingress/ingress-dash.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-dashboard-ingress
  namespace: polyglot-dev

spec:
  ingressClassName: nginx

  rules:
  - host: dashboard.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-dashboard-dev
            port:
              number: 80
